--- a/iphone/Maps/Classes/CustomViews/NavigationDashboard/Views/MWMNavigationInfoView.xib
+++ b/iphone/Maps/Classes/CustomViews/NavigationDashboard/Views/MWMNavigationInfoView.xib
@@ -61,7 +61,7 @@
                         <constraint firstItem="pWX-NL-dy3" firstAttribute="top" secondItem="fh6-Nu-aYU" secondAttribute="top" constant="8" id="QuG-5X-6WM"/>
                         <constraint firstItem="OJ3-VB-hqA" firstAttribute="top" secondItem="Tzc-l6-Vvt" secondAttribute="top" id="dYq-JZ-UgV"/>
                         <constraint firstItem="fh6-Nu-aYU" firstAttribute="top" secondItem="Tzc-l6-Vvt" secondAttribute="top" id="kaA-3q-cFB"/>
-                        <constraint firstItem="pWX-NL-dy3" firstAttribute="leading" secondItem="OJ3-VB-hqA" secondAttribute="trailing" priority="750" id="ngH-HH-FLo"/>
+                        <constraint firstItem="pWX-NL-dy3" firstAttribute="leading" secondItem="OJ3-VB-hqA" secondAttribute="trailing" priority="999" id="ngH-HH-FLo"/>
                         <constraint firstAttribute="trailing" secondItem="fh6-Nu-aYU" secondAttribute="trailing" id="o3O-CY-AKb"/>
                         <constraint firstAttribute="bottom" secondItem="OJ3-VB-hqA" secondAttribute="bottom" priority="500" id="uNX-H8-11S"/>
                         <constraint firstItem="pWX-NL-dy3" firstAttribute="bottom" secondItem="fh6-Nu-aYU" secondAttribute="bottom" constant="-8" id="whl-Po-qqC"/>
@@ -133,7 +133,7 @@
                             <rect key="frame" x="78" y="14" width="44" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="width" priority="750" constant="44" id="KKe-fH-h2n"/>
-                                <constraint firstAttribute="height" priority="750" constant="44" id="UEW-5h-9Jk"/>
+                                <constraint firstAttribute="width" secondItem="2Bv-7H-IZt" secondAttribute="height" multiplier="1:1" id="mN1-Tu-Mon"/>
                             </constraints>
                             <state key="normal" image="ic_routing_fuel_on"/>
                             <userDefinedRuntimeAttributes>
@@ -145,10 +145,6 @@
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RP3-01-Pj7" userLabel="Parking" customClass="MWMButton">
                             <rect key="frame" x="122" y="34" width="44" height="44"/>
-                            <constraints>
-                                <constraint firstAttribute="height" priority="750" constant="44" id="iq3-j8-GZG"/>
-                                <constraint firstAttribute="width" priority="750" constant="44" id="lwq-aN-y8y"/>
-                            </constraints>
                             <state key="normal" image="ic_routing_parking_on"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="string" keyPath="coloringName" value="MWMBlack"/>
@@ -159,10 +155,6 @@
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GcK-FI-VXw" userLabel="Food" customClass="MWMButton">
                             <rect key="frame" x="142" y="78" width="44" height="44"/>
-                            <constraints>
-                                <constraint firstAttribute="width" priority="750" constant="44" id="euI-Cb-zo4"/>
-                                <constraint firstAttribute="height" priority="750" constant="44" id="kdi-mH-aab"/>
-                            </constraints>
                             <state key="normal" image="ic_routing_food_on"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="string" keyPath="coloringName" value="MWMBlack"/>
@@ -173,10 +165,6 @@
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ggf-tc-U3R" userLabel="Shop" customClass="MWMButton">
                             <rect key="frame" x="122" y="122" width="44" height="44"/>
-                            <constraints>
-                                <constraint firstAttribute="width" priority="750" constant="44" id="2g5-C3-nTL"/>
-                                <constraint firstAttribute="height" priority="750" constant="44" id="fKJ-SP-gfS"/>
-                            </constraints>
                             <state key="normal" image="ic_routing_shop_on"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="string" keyPath="coloringName" value="MWMBlack"/>
@@ -187,10 +175,6 @@
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uoS-b2-FcN" userLabel="ATM" customClass="MWMButton">
                             <rect key="frame" x="78" y="142" width="44" height="44"/>
-                            <constraints>
-                                <constraint firstAttribute="width" priority="750" constant="44" id="Kvn-g8-63x"/>
-                                <constraint firstAttribute="height" priority="750" constant="44" id="rwg-ce-ESb"/>
-                            </constraints>
                             <state key="normal" image="ic_routing_atm_on"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="string" keyPath="coloringName" value="MWMBlack"/>
@@ -202,24 +186,32 @@
                     </subviews>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstItem="GcK-FI-VXw" firstAttribute="trailing" secondItem="Ggf-tc-U3R" secondAttribute="leading" priority="250" id="89h-kJ-0pV"/>
+                        <constraint firstItem="uoS-b2-FcN" firstAttribute="height" secondItem="2Bv-7H-IZt" secondAttribute="height" id="2F7-5g-ErR"/>
+                        <constraint firstItem="Ggf-tc-U3R" firstAttribute="width" secondItem="2Bv-7H-IZt" secondAttribute="width" id="2rN-Yz-3se"/>
+                        <constraint firstItem="GcK-FI-VXw" firstAttribute="trailing" secondItem="Ggf-tc-U3R" secondAttribute="leading" priority="260" id="89h-kJ-0pV"/>
                         <constraint firstItem="RP3-01-Pj7" firstAttribute="leading" secondItem="2Bv-7H-IZt" secondAttribute="trailing" priority="250" id="C9o-Bx-KXq"/>
                         <constraint firstAttribute="height" constant="200" id="ClV-rj-I5W"/>
                         <constraint firstAttribute="trailing" secondItem="Ggf-tc-U3R" secondAttribute="trailing" priority="500" constant="34" id="Cxa-Ms-3ud"/>
                         <constraint firstItem="uoS-b2-FcN" firstAttribute="centerX" secondItem="TMW-aw-1RT" secondAttribute="centerX" priority="500" id="Fva-Vq-x1E"/>
+                        <constraint firstItem="RP3-01-Pj7" firstAttribute="width" secondItem="2Bv-7H-IZt" secondAttribute="width" id="G7j-oT-tw9"/>
                         <constraint firstItem="GcK-FI-VXw" firstAttribute="centerY" secondItem="TMW-aw-1RT" secondAttribute="centerY" id="HaH-4G-jWc"/>
+                        <constraint firstItem="RP3-01-Pj7" firstAttribute="height" secondItem="2Bv-7H-IZt" secondAttribute="height" id="M5K-C3-PxI"/>
                         <constraint firstItem="2Bv-7H-IZt" firstAttribute="centerY" secondItem="TMW-aw-1RT" secondAttribute="centerY" priority="250" id="NcX-Rf-Cvm"/>
+                        <constraint firstItem="GcK-FI-VXw" firstAttribute="width" secondItem="2Bv-7H-IZt" secondAttribute="width" id="Qxb-Oh-gdO"/>
+                        <constraint firstItem="GcK-FI-VXw" firstAttribute="height" secondItem="2Bv-7H-IZt" secondAttribute="height" id="Rct-GE-0m2"/>
                         <constraint firstAttribute="bottom" secondItem="uoS-b2-FcN" secondAttribute="bottom" priority="500" constant="14" id="Skj-gh-LVA"/>
                         <constraint firstAttribute="bottom" secondItem="Ggf-tc-U3R" secondAttribute="bottom" priority="500" constant="34" id="ZWZ-hv-s2X"/>
                         <constraint firstAttribute="trailing" secondItem="RP3-01-Pj7" secondAttribute="trailing" priority="500" constant="34" id="ZrU-lQ-I2d"/>
+                        <constraint firstItem="uoS-b2-FcN" firstAttribute="width" secondItem="2Bv-7H-IZt" secondAttribute="width" id="bqX-bU-qi0"/>
                         <constraint firstItem="RP3-01-Pj7" firstAttribute="top" secondItem="TMW-aw-1RT" secondAttribute="top" priority="500" constant="34" id="eMY-fr-9hS"/>
                         <constraint firstItem="2Bv-7H-IZt" firstAttribute="top" secondItem="TMW-aw-1RT" secondAttribute="top" priority="500" constant="14" id="eOX-wt-nUe"/>
+                        <constraint firstItem="Ggf-tc-U3R" firstAttribute="height" secondItem="2Bv-7H-IZt" secondAttribute="height" id="ece-M8-eEa"/>
                         <constraint firstItem="RP3-01-Pj7" firstAttribute="centerY" secondItem="TMW-aw-1RT" secondAttribute="centerY" priority="250" id="iSp-hy-tmq"/>
                         <constraint firstItem="uoS-b2-FcN" firstAttribute="centerY" secondItem="TMW-aw-1RT" secondAttribute="centerY" priority="250" id="j4g-jo-knc"/>
                         <constraint firstAttribute="trailing" secondItem="GcK-FI-VXw" secondAttribute="trailing" priority="500" constant="14" id="jlf-5n-9UR"/>
                         <constraint firstAttribute="trailing" secondItem="uoS-b2-FcN" secondAttribute="trailing" priority="250" constant="8" id="lOI-E1-KoS"/>
                         <constraint firstAttribute="width" constant="200" id="mOu-Vw-eLb"/>
-                        <constraint firstItem="GcK-FI-VXw" firstAttribute="leading" secondItem="RP3-01-Pj7" secondAttribute="trailing" priority="250" id="nxu-rz-dZp"/>
+                        <constraint firstItem="GcK-FI-VXw" firstAttribute="leading" secondItem="RP3-01-Pj7" secondAttribute="trailing" priority="260" id="nxu-rz-dZp"/>
                         <constraint firstItem="2Bv-7H-IZt" firstAttribute="centerX" secondItem="TMW-aw-1RT" secondAttribute="centerX" priority="500" id="s89-b9-XaO"/>
                         <constraint firstItem="Ggf-tc-U3R" firstAttribute="centerY" secondItem="TMW-aw-1RT" secondAttribute="centerY" priority="250" id="sVL-ni-mon"/>
                         <constraint firstItem="2Bv-7H-IZt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="TMW-aw-1RT" secondAttribute="leading" id="vbk-wb-RCv"/>
@@ -400,6 +392,7 @@
                 <outlet property="nextTurnImageView" destination="AJe-8N-rpk" id="iMm-9u-rPI"/>
                 <outlet property="roundTurnLabel" destination="teB-QQ-oib" id="5p2-zz-Pe9"/>
                 <outlet property="searchATMButton" destination="uoS-b2-FcN" id="Sp2-hc-Lob"/>
+                <outlet property="searchButtonsSideSize" destination="KKe-fH-h2n" id="5EK-YA-bXw"/>
                 <outlet property="searchButtonsView" destination="TMW-aw-1RT" id="bQd-e2-Jey"/>
                 <outlet property="searchButtonsViewHeight" destination="ClV-rj-I5W" id="egz-NO-EAn"/>
                 <outlet property="searchButtonsViewWidth" destination="mOu-Vw-eLb" id="SsK-HE-lHC"/>
@@ -421,28 +414,19 @@
                 <outlet property="turnsWidth" destination="6Ja-Xp-g8h" id="kCr-a1-fph"/>
                 <outletCollection property="searchLandscapeConstraints" destination="iSp-hy-tmq" id="h2M-dj-EiD"/>
                 <outletCollection property="searchLandscapeConstraints" destination="C9o-Bx-KXq" id="5a5-4m-Dyf"/>
-                <outletCollection property="searchButtonsSideSize" destination="Kvn-g8-63x" id="EBu-lt-pbc"/>
                 <outletCollection property="searchButtonsSideSize" destination="KKe-fH-h2n" id="Okh-Is-iMi"/>
                 <outletCollection property="searchButtons" destination="uoS-b2-FcN" id="1Ly-Ve-2RT"/>
-                <outletCollection property="searchButtonsSideSize" destination="rwg-ce-ESb" id="jHF-yA-fAg"/>
-                <outletCollection property="searchButtonsSideSize" destination="lwq-aN-y8y" id="hmh-cr-pZk"/>
-                <outletCollection property="searchButtonsSideSize" destination="kdi-mH-aab" id="Kof-TU-UYG"/>
                 <outletCollection property="searchButtons" destination="2Bv-7H-IZt" id="co8-GL-K6m"/>
                 <outletCollection property="searchLandscapeConstraints" destination="lOI-E1-KoS" id="Zeu-Nj-vBU"/>
                 <outletCollection property="searchLandscapeConstraints" destination="89h-kJ-0pV" id="xBD-bu-bfe"/>
                 <outletCollection property="searchLandscapeConstraints" destination="sVL-ni-mon" id="DTz-eP-FWo"/>
                 <outletCollection property="searchButtons" destination="Ggf-tc-U3R" id="FIp-4y-5eA"/>
                 <outletCollection property="searchButtons" destination="GcK-FI-VXw" id="Ykw-0h-Emh"/>
-                <outletCollection property="searchButtonsSideSize" destination="fKJ-SP-gfS" id="hmq-Zw-cVL"/>
-                <outletCollection property="searchButtonsSideSize" destination="iq3-j8-GZG" id="WjZ-71-4er"/>
                 <outletCollection property="searchLandscapeConstraints" destination="nxu-rz-dZp" id="Y1O-08-buw"/>
                 <outletCollection property="searchLandscapeConstraints" destination="vcn-Dj-WUu" id="kjW-Jd-TLm"/>
                 <outletCollection property="searchLandscapeConstraints" destination="j4g-jo-knc" id="EG6-ya-ahs"/>
-                <outletCollection property="searchButtonsSideSize" destination="2g5-C3-nTL" id="hKe-PI-ohQ"/>
                 <outletCollection property="searchLandscapeConstraints" destination="NcX-Rf-Cvm" id="vwd-uF-iTf"/>
-                <outletCollection property="searchButtonsSideSize" destination="euI-Cb-zo4" id="W8L-Ax-Ks1"/>
                 <outletCollection property="searchButtons" destination="RP3-01-Pj7" id="1nL-Ib-y49"/>
-                <outletCollection property="searchButtonsSideSize" destination="UEW-5h-9Jk" id="ZWN-om-GgR"/>
                 <outletCollection property="searchLandscapeConstraints" destination="Y9b-UG-buF" id="cjs-so-6PQ"/>
                 <outletCollection property="searchLandscapeConstraints" destination="pFP-r6-dGK" id="p6X-D7-oom"/>
                 <outletCollection property="searchLandscapeConstraints" destination="boQ-v0-PUh" id="cV7-rz-brS"/>
