--- a/android/res/layout/item_cian_product.xml
+++ b/android/res/layout/item_cian_product.xml
@@ -5,8 +5,8 @@
   android:layout_width="wrap_content"
   android:layout_height="wrap_content">
   <LinearLayout
-    android:layout_width="@dimen/viator_product_width"
-    android:layout_height="@dimen/viator_product_height"
+    android:layout_width="@dimen/cian_product_width"
+    android:layout_height="@dimen/cian_product_height"
     android:orientation="vertical"
     android:foreground="?clickableBackground">
     <TextView
@@ -16,7 +16,7 @@
       android:layout_marginTop="@dimen/margin_half_plus"
       android:layout_marginLeft="@dimen/margin_half_plus"
       android:layout_marginRight="@dimen/margin_half_plus"
-      android:textAppearance="@style/MwmTextAppearance.Body3"
+      android:textAppearance="@style/MwmTextAppearance.Body4"
       android:textColor="?colorAccent"
       android:maxLines="1"
       android:ellipsize="end"
@@ -25,19 +25,21 @@
       android:id="@+id/tv__title"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/margin_half_plus"
+      android:layout_marginTop="@dimen/margin_quarter"
       android:layout_marginLeft="@dimen/margin_half_plus"
       android:layout_marginRight="@dimen/margin_half_plus"
       android:textAppearance="@style/MwmTextAppearance.Body3.Primary"
+      android:fontFamily="@string/robotoMedium"
       android:maxLines="1"
       android:ellipsize="end"
-      tools:text="3-комн. кв, 215 м²"/>
+      tools:text="3-комн. кв, 215 м²"
+      tools:targetApi="jelly_bean"/>
     <TextView
       android:id="@+id/tv__address"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
-      android:layout_marginTop="@dimen/margin_half_plus"
+      android:layout_marginTop="@dimen/margin_quarter"
       android:layout_marginLeft="@dimen/margin_half_plus"
       android:layout_marginRight="@dimen/margin_half_plus"
       android:textAppearance="@style/MwmTextAppearance.Body4"
@@ -45,10 +47,13 @@
       tools:text="Чапаевский пер., 3"/>
     <TextView
       android:layout_width="match_parent"
-      android:layout_height="@dimen/height_block_base"
+      android:layout_height="@dimen/cian_details_height"
       android:textAppearance="@style/MwmTextAppearance.Button"
+      android:textSize="@dimen/text_size_caption"
+      android:fontFamily="@string/robotoMedium"
       android:gravity="center"
       android:background="?windowBackgroundForced"
-      android:text="@string/details"/>
+      android:text="@string/details"
+      tools:targetApi="jelly_bean"/>
   </LinearLayout>
 </android.support.v7.widget.CardView>
