--- a/android/res/layout-land/place_page_details.xml
+++ b/android/res/layout-land/place_page_details.xml
@@ -59,6 +59,8 @@
 
         <include layout="@layout/place_page_hotel_rating"/>
 
+        <include layout="@layout/place_page_ugc"/>
+
         <include layout="@layout/place_page_placename"/>
 
         <include layout="@layout/place_page_opening_hours"/>
