[android] Fix cian jni crash. Added cian cache. Loading info error message.

--- a/android/res/values/themes-attrs.xml
+++ b/android/res/values/themes-attrs.xml
@@ -85,7 +85,7 @@
 
     <attr name="tagBackground" format="reference"/>
 
-    <attr name="viatorMore" format="reference"/>
+    <attr name="sponsoredGalleryMore" format="reference"/>
   </declare-styleable>
 
   <declare-styleable name="ThemeAttrs.NavButtons">
