[android] Renamed cian logo resource

--- a/android/res/values/themes-base.xml
+++ b/android/res/values/themes-base.xml
@@ -104,7 +104,7 @@
 
     <item name="sponsoredGalleryMore">@drawable/ic_sponsored_gallery_more</item>
 
-    <item name="cianLogo">@drawable/logo_cain_light</item>
+    <item name="cianLogo">@drawable/logo_cian_light</item>
   </style>
 
   <!-- Night theme -->
@@ -211,6 +211,6 @@
 
     <item name="sponsoredGalleryMore">@drawable/ic_sponsored_gallery_more_night</item>
 
-    <item name="cianLogo">@drawable/logo_cain_dark</item>
+    <item name="cianLogo">@drawable/logo_cian_dark</item>
   </style>
 </resources>
