[android] Added viator logo and theme attribute

--- a/android/res/values/themes-attrs.xml
+++ b/android/res/values/themes-attrs.xml
@@ -88,6 +88,7 @@
     <attr name="sponsoredGalleryMore" format="reference"/>
 
     <attr name="cianLogo" format="reference"/>
+    <attr name="viatorLogo" format="reference" />
   </declare-styleable>
 
   <declare-styleable name="ThemeAttrs.NavButtons">
