[android] Fixed android build after string merge

--- a/android/res/layout/card_loading.xml
+++ b/android/res/layout/card_loading.xml
@@ -44,6 +44,6 @@
     android:fontFamily="@string/robotoMedium"
     android:gravity="center"
     android:background="?windowBackgroundForced"
-    android:text="@string/details"
+    android:text="@string/preloader_cian_button"
     tools:targetApi="jelly_bean"/>
 </LinearLayout>
